Actions
Bug #9410
closedgld: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
../../common/io/gld.c: In function 'gld_wput': ../../common/io/gld.c:1731:13: error: this statement may fall through [-Werror=implicit-fallthrough=] multidata = B_FALSE; ~~~~~~~~~~^~~~~~~~~ ../../common/io/gld.c:1733:2: note: here case M_MULTIDATA: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 80e626097a0835083ba4adb104b6d24bc1b6c6b4
commit 80e626097a0835083ba4adb104b6d24bc1b6c6b4 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:40.000Z 9410 gld: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions